peckadesign/pdproject5#2860 Aktualizace PHP pro pd/utils
- nette/tester jako dev závislost
- doplněny testy na české IČO
- testy se spouští v travisu

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 	},
 	"require-dev": {
 		"pd/coding-standard": "1.21.*",
-		"phpstan/phpstan-shim": "0.10.*"
+		"phpstan/phpstan-shim": "0.10.*",
+		"nette/tester": "2.3.*"
 	},
 	"autoload": {
 		"psr-4": {
