--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ script:
     - vendor/bin/phpcs src/ --standard=vendor/pd/coding-standard/src/PeckaCodingStandard/ruleset.xml
     - vendor/bin/phpcs src/ --standard=vendor/pd/coding-standard/src/PeckaCodingStandardStrict/ruleset.xml
     - vendor/bin/phpstan analyse --level 7 src/
+    - vendor/bin/tester tests/
 
 before_script:
     - composer validate
