--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
 		"php": "^7.1"
 	},
 	"require-dev": {
-		"pd/coding-standard": "1.21.0",
-		"phpstan/phpstan-shim": "0.11.12",
-		"nette/tester": "2.3.2"
+		"pd/coding-standard": "1.21.*",
+		"phpstan/phpstan": "^0.12",
+		"nette/tester": "~2.3.2"
 	},
 	"autoload": {
 		"psr-4": {
